# quectocraft

./: Cargo.toml  README.md
docs/: plugins.md
plugins/: testcmd.lua
plugins/chat/: main.lua
plugins/example_plugin/: main.lua
plugins/mcchat/: main.lua
src/: config.rs  main.rs  plugins.rs
src/network/: client.rs  mod.rs  server.rs
src/plugins/: init.lua  init_lua.rs  mod.rs  plugin.rs
src/protocol/: clientbound.rs  command.rs  data.rs  mod.rs  serverbound.rs
src/resources/: registry_codec.nbt
