[package]
name = "quectocraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hematite-nbt = "0.5"
serde_json = "1.0"
serde = "1.0"
mlua = { version = "0.8", features = ["lua54", "macros", "serialize"] }
uuid = "1.2"
log = "0.4.0"
env_logger = "0.10.0"
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
